# socket-session-retainer

./: CMakeLists.txt  README.md
inc/: CMakeLists.txt  application.hpp  client_session.hpp  handshake_message.pb.cc  handshake_message.pb.h  handshake_message.proto  participant.hpp  proxy_server.hpp  server_session.hpp  session.hpp  session_manager.hpp
src/: CMakeLists.txt  sevenmile.cpp
